@startuml
' Рис. 2.7. Логічна схема бази даних
skinparam shadowing false
skinparam defaultFontName "Times New Roman"
skinparam defaultFontSize 10
hide circle
skinparam linetype ortho
skinparam entity {
    BackgroundColor #f5f5f5
    BorderColor #333333
}

entity "profiles" {
    * id : INTEGER <<PK>>
    --
    code : VARCHAR(16) <<UQ>>
    name : VARCHAR(128)
    description : TEXT
}

entity "criteria" {
    * id : INTEGER <<PK>>
    --
    code : VARCHAR(32) <<UQ>>
    name : VARCHAR(128)
    unit : VARCHAR(32)
    optimization_type : VARCHAR(4)
    scale : VARCHAR(16)
}

entity "pairwise_matrices" {
    * profile_id : INTEGER <<PK,FK>>
    * criterion_i : INTEGER <<PK,FK>>
    * criterion_j : INTEGER <<PK,FK>>
    --
    l : NUMERIC(6,3)
    m : NUMERIC(6,3)
    u : NUMERIC(6,3)
}

entity "locations" {
    * id : INTEGER <<PK>>
    --
    name : VARCHAR(128)
    address : VARCHAR(256)
    district : VARCHAR(64)
    geom : GEOMETRY(Point, 4326)
    -- просторовий індекс (geom) --
}

entity "existing_stations" {
    * id : INTEGER <<PK>>
    --
    name : VARCHAR(128)
    power_kw : NUMERIC(6,2)
    connector_type : VARCHAR(32)
    geom : GEOMETRY(Point, 4326)
    -- просторовий індекс (geom) --
}

entity "evaluation_runs" {
    * id : INTEGER <<PK>>
    * profile_id : INTEGER <<FK>>
    --
    created_at : TIMESTAMP
    status : VARCHAR(16)
    weights_vector : JSON-документ
    execution_time_ms : INTEGER
}

entity "ranking_items" {
    * evaluation_id : INTEGER <<PK,FK>>
    * location_id : INTEGER <<PK,FK>>
    --
    rank : SMALLINT
    closeness_coefficient : NUMERIC(8,6)
    distance_to_positive : NUMERIC(8,6)
    distance_to_negative : NUMERIC(8,6)
}

entity "sensitivity_records" {
    * evaluation_id : INTEGER <<PK,FK>>
    --
    iterations : INTEGER
    perturbation : NUMERIC(4,3)
    stability_matrix : JSON-документ
    confidence_intervals : JSON-документ
}

profiles ||--o{ pairwise_matrices
criteria ||--o{ pairwise_matrices
profiles ||--o{ evaluation_runs
evaluation_runs ||--o{ ranking_items
evaluation_runs ||--|| sensitivity_records
locations ||--o{ ranking_items

@enduml
